# manima

./: .env.example  .gitignore  .hadolint.yaml  LICENSE  MANIMA-arc42.docx  Makefile  README.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
harness/: .gitignore  README.md  pyproject.toml
harness/manima_harness/: __init__.py  __main__.py  client.py  config.py  contract.py  control.py  instrument.py  record.py
harness/manima_harness/analysis/: __init__.py  report.py  success.py  taxonomy.py  throughput.py
harness/manima_harness/generators/: __init__.py  frontier.py
harness/manima_harness/profiles/: __init__.py  burst.py  mixed.py  repair_heavy.py  soak.py
harness/manima_harness/prompts/: __init__.py  easy.yaml  hard.yaml  medium.yaml
manima_server/: .gitignore  README.md  pyproject.toml
manima_server/docker/: Dockerfile
manima_server/manima_server/: __init__.py  config.py  server.py  version.py
manima_server/manima_server/adapters/: __init__.py  docker_sandbox.py  escalation_generator.py  fs_store.py  qdrant_grounding.py  sqlite_jobs.py  vllm_generator.py
manima_server/manima_server/core/: __init__.py  domain.py  escalation.py  hashing.py  job_manager.py  reaper.py  state_machine.py  validator.py
manima_server/manima_server/core/ports/: __init__.py
manima_server/scripts/: bringup.sh  build_corpus.py  smoke_render.py
manima_server/tests/: test_core.py  test_job_manager.py  test_reaper.py  test_storage.py
openspec/: project.md
openspec/changes/001-apertus-load-harness/: proposal.md  tasks.md
openspec/changes/add-deployment-and-github-ci/: proposal.md  tasks.md
openspec/changes/archive/2026-07-13-build-manima-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-build-manima-server/specs/generate/: spec.md
openspec/changes/archive/2026-07-13-build-manima-server/specs/jobs/: spec.md
openspec/changes/archive/2026-07-13-build-manima-server/specs/render/: spec.md
openspec/changes/archive/2026-07-13-build-manima-server/specs/sandbox/: spec.md
openspec/changes/archive/2026-07-15-add-deployment-and-github-ci/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-add-deployment-and-github-ci/specs/ci-pipeline/: spec.md
openspec/changes/archive/2026-07-15-add-deployment-and-github-ci/specs/deployment/: spec.md
openspec/specs/ci-pipeline/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/generate/: spec.md
openspec/specs/jobs/: spec.md
openspec/specs/render/: spec.md
openspec/specs/sandbox/: spec.md
