[project]
name = "manima-harness"
version = "0.1.0"
description = "Apertus load-test harness — drives MANIMA through its public MCP surface"
requires-python = ">=3.12"
dependencies = [
    # MCP client — the harness is an ordinary stdio client of the MANIMA server.
    "mcp>=1.0",
    # Prompt suite is authored as YAML data.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Control condition only. The frontier adapter talks to a hosted model; the rest
# of the harness never imports it, so a sovereign run needs none of this.
frontier = ["anthropic>=0.40"]
# CI/lint toolchain (mirrors manima_server's dev extra). The harness has no unit
# suite yet; CI compiles it and runs pytest, tolerating an empty collection.
dev = ["pytest>=8.0", "ruff>=0.6", "pip-tools>=7.0"]

[project.scripts]
manima-harness = "manima_harness.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manima_harness"]
